tests/NormalTests/paczka1/fuzzy1/55847834.err
Error in line 4: yoU01D6E S843 36,1
Error in line 8: GY2IstEHqu A854 7,3
Error in line 10: S843 A562 56,4
Error in line 14: T0FkC3Q8Qt A557 81,0
Error in line 19: qZKTJ9vtWV A562 64,2
Error in line 21: p8lS5x A562 94,9
Error in line 36: S843 S843 61,3
Error in line 35: pAK S843 67,0
